<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kanban Data Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="scanning_instructions">Scanning the board:\n
\n
1) Touch phone to cell\n
2) Touch phone to each task in cell\n</string>
    <string name="save">Save</string>
    <string name="action_about">About</string>
    <string name="action_help">Help</string>
    <string name="action_program">Program</string>
    <string name="title_activity_help">Help</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_close">Close</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="version">Version 1.0.0-SNAPSHOT</string>
    <string name="license">Copyright 2013 Jim Hurne and Joseph Kramer&lt;/p>
&lt;p>
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this software except in compliance with the License.
You may obtain a copy of the License at
&lt;/p>&lt;p>
&lt;a href="http://www.apache.org/licenses/LICENSE-2.0">http://www.apache.org/licenses/LICENSE-2.0&lt;/a>
&lt;/p>&lt;p>
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
&lt;/p></string>
    <string name="title_scan_tab">Scan</string>
    <string name="title_program_tab">Program</string>
    
    <string name="title_activity_program_tag">Program Tag</string>
    <string name="program_tag_instructions">To program a tag, enter desired data above and then scan the tag</string>
    <string name="action_delete_scan">Delete</string>
    <string name="swimlane_label">Swimlane</string>
    <string name="queue_label">Queue</string>
    <string name="task_id_label">ID</string>
    <string name="task_name_label">Name</string>
    <string name="task_size_label">Size</string>
    <string name="tag_type_label">Type</string>
    <string name="tag_type_prompt">Select a tag type</string>
    <string name="tag_programmed">Tag Programmed</string>
    <string-array name="tag_types_array">
        <item>Task</item>
        <item>Cell</item>
    </string-array>
        <string name="action_clear">Clear</string>
        <string name="replace_last_scanned">Replace last scanned tag</string>
</resources>