<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_program"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ProgramTagActivity" >

    <LinearLayout
        android:id="@+id/tag_type_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tag_type_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag_type_label" />

        <Spinner
            android:id="@+id/tag_type_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5pt"
            android:entries="@array/tag_types_array"
            android:prompt="@string/tag_type_prompt" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cell_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/swimlane_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swimlane_label" />

        <EditText
            android:id="@+id/swimlane_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/queue_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/queue_label" />

        <EditText
            android:id="@+id/queue_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/task_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible" >

        <TextView
            android:id="@+id/task_id_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_id_label" />

        <EditText
            android:id="@+id/task_id_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/task_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_name_label" />

        <EditText
            android:id="@+id/task_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/task_size_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_size_label" />

        <EditText
            android:id="@+id/task_size_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />
    </LinearLayout>

</LinearLayout>